web-infras/parser/tests/fixtures/esprima/es2017/async/methods/invalid-async-setter/output.txt
[SyntaxError]: setter can not be async or generator. (1,16)
1|x = {async set s(i) {} }
 |              ^
